--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+
+
+# Do not save credentials in the repository
+_password_.txt
+_username_.txt
